css/style.css
body {
    background-color: teal;
}

h1 {
    color: white;
}

ul {
    list-style-type: none;
    display: flex;
    flex-wrap: wrap;
    gap: 25px;
    padding-left: 0;
    
    li {        
        height: 75px;
        width: 75px;
        border: 2px solid pink;      
        background-color: rgb(65, 65, 194);
        display: flex;
        align-items: center;
        justify-content: center;
    }
}

